--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,6 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <parent>
-    <groupId>org.codehaus.mojo</groupId>
-    <artifactId>mojo-parent</artifactId>
-    <version>72</version>
-  </parent>
-
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.polivakha</groupId>
@@ -34,16 +28,17 @@
   <version>1.0.0</version>
 
   <name>Properties Maven Plugin</name>
+
   <description> 
     The Properties Maven Plugin is here to make life a little easier when dealing
     with properties. It provides goals to read and write properties from files.
   </description>
 
-  <inceptionYear>2009</inceptionYear>
+  <inceptionYear>2023</inceptionYear>
 
   <packaging>maven-plugin</packaging>
 
-  <url>http://www.mojohaus.org/properties-maven-plugin</url>
+  <url>https://github.com/Mikhail2048/properties-maven-plugin</url>
 
   <licenses>
     <license>
@@ -117,6 +112,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
     <!-- dependencies to annotations -->
@@ -124,9 +120,35 @@
       <groupId>org.apache.maven.plugin-tools</groupId>
       <artifactId>maven-plugin-annotations</artifactId>
       <scope>provided</scope>
+      <version>3.6.0</version>
     </dependency>
-
   </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-plugin-plugin</artifactId>
+          <version>3.6.4</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <target>11</target>
+          <source>11</source>
+          <compilerArgs>
+            <arg>-Xlint:all</arg>
+            <arg>-O</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <profiles>
     <profile>
